--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <title>Happy Diwali 2019</title>
+        <meta charset="utf-8">
+	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	    <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="dia.jpg" type="image/gif" sizes="16x16">
 		<link rel="stylesheet" type="text/css" href="style.css">
     </head>
